producer/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: producer-service
  namespace: default
  labels:
    app: cadastro-cliente-producer
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: cadastro-cliente-producer
