producer/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: producer-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: producer.cadastro-cliente.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: producer-service
                port:
                  number: 80
